--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,4 +7,11 @@
   text-shadow: 3px 3px 5px rgba(0,0,0,0.4);
   text-align: center;
   }
+
+  h6 {
+  font-weight: bold;
+  color: white;
+  text-shadow: 3px 3px 5px rgba(0,0,0,0.4);
+  text-align: center;
+  }
 }
