--- a/app/views/work_periods/index.html.erb
+++ b/app/views/work_periods/index.html.erb
@@ -22,6 +22,26 @@
 
   <div class="row">
 
+    <div class="col mb-4">
+      <div class="card">
+        <div class="card-header">
+          <p class="my-auto"><strong> Detalhes da Meta Mensal - <%= localize(Date.today, format: "%B de %Y") %></strong></p>
+        </div>
+
+        <div class="card-body">
+          <ul class="my-auto list-unstyled">
+            <li>Meta mensal: <strong></strong></li>
+            <li>Débito do mês anterior: <strong></strong></li>
+            <li>Abono da Meta: <strong></strong></li>
+            <li>Meta atualizada: <strong></strong></li>
+            <li>Soma da pontuação até <%= localize(Date.today, fomart: :default) %>: <strong><%= @current_month_score.round(2) %></strong></li>
+            <li>Pontos do dia (<%= localize(Date.today, fomart: :default) %>): <strong></strong></li>
+            <li>Falta para atingir a meta mensal: <strong></strong></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
     <%# Início do CARD de períodos de atividade  %>
     <div class="col">
       <div class="card">
@@ -55,17 +75,61 @@
       </div>
     </div>
     <%# Fim do CARD de Períodos de atividade  %>
+  </div>
 
+  <div class="row">
     <div class="col mb-4">
       <div class="card">
         <div class="card-header">
-          <p class="my-auto"><strong> Detalhes da Meta Mensal</strong></p>
+          <p class="my-auto"><strong> Lista com todos os ponto do mês de <%= localize(Date.today, format: "%B") %></strong></p>
         </div>
 
         <div class="card-body">
-          <ul class="my-auto list-unstyled">
-            <li></li>
-          </ul>
+          <div id="table">
+                <table class="table table-hover">
+                  <thead class="thead-dark">
+                    <tr>
+                      <th>Tarefa</th>
+                      <th>Serviço</th>
+                      <th>Status </th>
+                      <th>Pontuação</th>
+                      <th>Data</th>
+                      <th colspan="2">Ações</th>
+                    </tr>
+                  </thead>
+                  <tbody id="tbody">
+                    <% @current_month_scores.each do |score| %>
+                      <tr>
+                        <td><%= score.requeriment.protocol %></td>
+                        <td><%= score.requeriment.servico %></td>
+                        <td><%= score.status.capitalize %></td>
+                        <td><%= score.score %></td>
+                        <td><%= score.date.strftime("%d/%m/%Y") %></td>
+                        <td>
+                          <% if policy(score).edit? %>
+                            <%= link_to edit_score_path(score), class: "text-primary", title: "Alterar data" do %>
+                              <i class="fas fa-edit"></i>
+                            <% end %>
+                          <% end %>
+
+                          <% if policy(score).destroy? %>
+                            <%= link_to score_path(score), method: :delete, class: "text-danger", title: "Deletar", data: { confirm: "Deseja confirmar a exclusão?" } do%>
+                              <i class="fas fa-trash"></i>
+                            <% end %>
+                          <% end %>
+
+                        </td>
+                    </tr>
+                    <% end %>
+                    <tr>
+                      <td></td>
+                      <td></td>
+                      <td><strong>Total</strong></td>
+                      <td><strong><%= @current_month_scores.map{|item| item.score}.reduce(0, :+).round(2) %></strong></td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
         </div>
       </div>
     </div>
